03-gitops/apps/01-platform/argocd/argocd-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ui-tailscale
  namespace: argocd
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - argocd
  defaultBackend:
    service:
      name: argocd-server
      port:
        name: https
